@@ -7,29 +7,25 @@ import com.academy.dtos.appointment.AppointmentMapper;
 import com.academy.dtos.appointment.AppointmentRequestDTO;
 import com.academy.dtos.appointment.AppointmentResponseDTO;
 import com.academy.exceptions.EntityNotFoundException;
-import com.academy.models.Appointment;
+import com.academy.models.appointment.Appointment;
 import com.academy.models.member.Member;
+import com.academy.models.service.service_provider.ProviderPermission;
+import com.academy.models.service.service_provider.ProviderPermissionEnum;
 import com.academy.models.service.service_provider.ServiceProvider;
 import com.academy.repositories.AppointmentRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class AppointmentService {
 
     private final AppointmentRepository appointmentRepository;
-
     private final ServiceProviderService serviceProviderService;
-
     private final AppointmentMapper appointmentMapper;
-
     private final MemberService memberService;
 
     private final AuthenticationFacade authenticationFacade;
@@ -53,61 +49,79 @@ public class AppointmentService {
     }
 
     public List<AppointmentResponseDTO> getAllAppointments() {
-
         return appointmentRepository.findAll().stream()
-
                 .map(appointmentMapper::toResponseDTO)
-
-                .collect(Collectors.toList());
-
+                .toList();
     }
 
-    public AppointmentResponseDTO getAppointmentById(int id) {
+    public AppointmentResponseDTO getAppointmentById(Long id) {
 
         return appointmentRepository.findById(id)
 
                 .map(appointmentMapper::toResponseDTO)
-
                 .orElseThrow(() -> new EntityNotFoundException(Appointment.class, id));
 
     }
 
     public AppointmentResponseDTO createAppointment(AppointmentRequestDTO dto) {
+        // Validate date is not in the past
+        if (dto.startDateTime().isBefore(LocalDateTime.now())) {
+            throw new IllegalArgumentException("Não é possível agendar para datas passadas");
+        }
 
         String username = authenticationFacade.getUsername();
         Member member = memberService.getMemberByUsername(username);
 
         ServiceProvider serviceProvider = serviceProviderService.getServiceProviderEntityById(dto.serviceProviderId());
 
+        // Validate SERVE permission
+        boolean hasServePermission = serviceProvider.getPermissions().stream()
+                .map(ProviderPermission::getPermission)
+                .anyMatch(p -> p == ProviderPermissionEnum.SERVE);
+        if (!hasServePermission) {
+            throw new IllegalStateException("Service provider não possui permissão SERVE");
+        }
+
+        // Calculate end time
+        int serviceDurationMinutes = serviceProvider.getService().getDuration();
+        LocalDateTime endDateTime = dto.startDateTime().plusMinutes(serviceDurationMinutes);
+
+        // Check for conflicts
+        List<Appointment> conflictingAppointments = appointmentRepository
+                .findConflictingAppointments(
+                        serviceProvider.getId(),
+                        dto.startDateTime(),
+                        endDateTime
+                );
+        if (!conflictingAppointments.isEmpty()) {
+            throw new IllegalStateException("Já existe um agendamento para este horário");
+        }
+
+        // Create and save appointment
         Appointment appointment = appointmentMapper.toEntity(dto);
-
-
         appointment.setMember(member);
         appointment.setServiceProvider(serviceProvider);
-        appointment.setStartDateTime(dto.startDateTime());
-        appointment.setEndDateTime(dto.endDateTime());
-        appointment.setStatus(dto.status());
+        appointment.setEndDateTime(endDateTime);
 
         return appointmentMapper.toResponseDTO(appointmentRepository.save(appointment));
     }
 
 
 
-    public AppointmentResponseDTO updateAppointment(int id, AppointmentRequestDTO appointmentDetails) {
+
+    public AppointmentResponseDTO updateAppointment(Long id, AppointmentRequestDTO appointmentDetails) {
 
         Appointment appointment = appointmentRepository.findById(id)
 
                 .orElseThrow(() -> new EntityNotFoundException(Appointment.class, id));
 
-        String username = authenticationFacade.getUsername();
-        Member member = memberService.getMemberByUsername(username);
 
-        if(appointmentDetails.serviceProviderId() != null) {
-            ServiceProvider serviceProvider = serviceProviderService.getServiceProviderEntityById(appointmentDetails.serviceProviderId());
-            appointment.setServiceProvider(serviceProvider);
-        }
+        ServiceProvider serviceProvider = serviceProviderService.getServiceProviderEntityById(appointmentDetails.serviceProviderId());
+        appointment.setServiceProvider(serviceProvider);
 
-        if(appointmentDetails.rating() != appointment.getRating() )appointment.setRating(appointmentDetails.rating());
+
+        if(appointmentDetails.rating().equals(appointment.getRating()))
+            appointment.setRating(appointmentDetails.rating());
 
         if(appointmentDetails.comment() != null) appointment.setComment(appointmentDetails.comment());
 
@@ -115,7 +129,7 @@ public class AppointmentService {
 
     }
 
-    public void deleteAppointment(int id) {
+    public void deleteAppointment(Long id) {
 
         if(!appointmentRepository.existsById(id)) throw new EntityNotFoundException(Appointment.class, id);
 
@@ -123,7 +137,7 @@ public class AppointmentService {
 
     }
 
-    public void deleteReview(int id){
+    public void deleteReview(Long id){
 
         Appointment appointment = appointmentRepository.findById(id)
 
@@ -139,11 +153,14 @@ public class AppointmentService {
 
     public List<Appointment> getAppointmentsForProvider(Long providerId) {
     if (providerId == null) {
-        throw new IllegalArgumentException("Provider ID cannot be null");
+        throw new EntityNotFoundException(Appointment.class, providerId);
     }
         LocalDateTime now = LocalDateTime.now();
         LocalDateTime end = now.plusDays(slotWindowDays);
         return appointmentRepository.findByServiceProvider_Provider_IdAndStartDateTimeBetween(providerId, now, end);
     }
-}
 
+    public List<Appointment> getAppointmentsForServiceProvider(Long serviceProviderId) {
+        return appointmentRepository.findByServiceProviderId(serviceProviderId);
+    }
+}
